# begin_rust

./: Cargo.toml  README.md
extc/: readme.md
extc/adder/: Cargo.toml  READEME.md
extc/adder/src/: lib.rs
extc/adder/tests/: integration_test.rs
extc/art/: Cargo.toml
extc/art/src/: lib.rs
extc/asyncs/: Cargo.toml
extc/asyncs/src/: main.rs
extc/minigrep/: Cargo.toml
extc/minigrep/src/: lib.rs
extc/my_crate/: Cargo.toml
extc/my_crate/src/: lib.rs
extc/restaurant/: Cargo.toml
extc/restaurant/src/: lib.rs
src/: lib.rs  main.rs  my_lib.rs
src/action/: destruct.rs  drop.rs  funcs.rs  mod.rs  ops.rs  traits.rs  unsafes.rs
src/examples/: custom_types.rs  hello_world.rs  mod.rs
src/examples/conversion/: from_and_into.rs  mod.rs  to_and_from_strings.rs  try_from_and_into.rs
src/examples/custom_types/: constants.rs  enums.rs  structures.rs
src/examples/expressions/: mod.rs
src/examples/flow_of_control/: for_loops.rs  if_else.rs  if_let.rs  loops.rs  matches.rs  mod.rs  while_let.rs  whiles.rs
src/examples/functions/: methods.rs  mod.rs
src/examples/primitives/: arrays_and_slices.rs  literals_and_operators.rs  mod.rs
src/examples/types/: aliasing.rs  casting.rs  inference.rs  literals.rs  mod.rs
src/examples/variable_bindings/: declare_first.rs  freezing.rs  mod.rs  mutability.rs  scope_and_shadowing.rs
src/my_mod/: add.rs  misc.rs  mod.rs  patterns.rs  readme.md  sub.rs
src/primer/: READEME.md
src/the_book/: mod.rs
src/the_book/advanced_features/: advanced_traits.rs  advanced_types.rs  mod.rs
src/the_book/an_io_project/: accepting_cmd_args.rs  improve_modularity_and_error_handling.rs  minigrep_v1.rs  mod.rs
src/the_book/common_collections/: hash_maps.rs  mod.rs  strings.rs  vectors.rs
src/the_book/common_prog_concept/: control_flow.rs  data_types.rs  functions.rs  mod.rs
src/the_book/enums_pattern_match/: define.rs  if_let.rs  match_op.rs  mod.rs
study_notes/: READEME.md  build_profiles.md  unit_type.md
tests/: integration_test.rs
(+47 files in other folders)
