[package]
name = "hello_rust"
version = "0.1.0"
authors = ["yiqing <yiqing_95@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"

structopt = "0.3"
seahorse = "0.7"
